# internal/api/http/v01/types.go
@@ -2,9 +2,6 @@ package v01
 
 import (
 	"T/internal/entity"
-	"fmt"
-	"github.com/google/uuid"
-	"time"
 )
 
 //	type LoginRequest struct {
@@ -25,151 +22,200 @@ import (
 //		AccessToken  string `json:"access_token" example:"eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9..."`
 //		RefreshToken string `json:"refresh_token" example:"YW5vdGhlci1uZXctYmFzZTY0LXRva2Vu"`
 //	}
-type CreateSubscriptionRequest struct {
-	ServiceName string `json:"service_name" example:"Yandex Plus"`
-	Price       int    `json:"price" example:"400"`
-	UserID      string `json:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
-	StartDate   string `json:"start_date" example:"2025-07-01"`
-	EndDate     string `json:"end_date,omitempty" example:"2025-12-01"`
+//
+//	type CreateSubscriptionRequest struct {
+//		ServiceName string `json:"service_name" example:"Yandex Plus"`
+//		Price       int    `json:"price" example:"400"`
+//		UserID      string `json:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
+//		StartDate   string `json:"start_date" example:"2025-07-01"`
+//		EndDate     string `json:"end_date,omitempty" example:"2025-12-01"`
+//	}
+//
+//	type SubscriptionResponse struct {
+//		ID          string `json:"id"`
+//		ServiceName string `json:"service_name"`
+//		Price       int    `json:"price"`
+//		UserID      string `json:"user_id"`
+//		StartDate   string `json:"start_date"`
+//		EndDate     string `json:"end_date,omitempty"`
+//	}
+//
+//	type TotalCostRequest struct {
+//		UserID      string `query:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
+//		ServiceName string `query:"service_name" example:"Netflix"`
+//		StartFrom   string `query:"start_from" example:"2024-06-01"`
+//		EndTo       string `query:"end_to" example:"2025-08-01"`
+//	}
+//
+//	type TotalCostResponse struct {
+//		Total int `json:"total" example:"1200"`
+//	}
+//
+//	type ListQueryParams struct {
+//		Limit  *int `query:"limit" example:"20"`
+//		Offset *int `query:"offset" example:"40"`
+//	}
+//
+//	func (r CreateSubscriptionRequest) ToEntity() (*entity.Subscription, error) {
+//		const layout = "2006-01-02" // MM-YYYY
+//
+//		userID, err := uuid.Parse(r.UserID)
+//		if err != nil {
+//			return nil, fmt.Errorf("invalid user_id: %w", err)
+//		}
+//
+//		startDate, err := time.Parse(layout, r.StartDate)
+//		if err != nil {
+//			return nil, fmt.Errorf("invalid start_date: %w", err)
+//		}
+//
+//		var endDate time.Time
+//		if r.EndDate != "" {
+//			endDate, err = time.Parse(layout, r.EndDate)
+//			if err != nil {
+//				return nil, fmt.Errorf("invalid end_date: %w", err)
+//			}
+//		}
+//
+//		return &entity.Subscription{
+//			ID:          uuid.New(),
+//			ServiceName: r.ServiceName,
+//			Price:       r.Price,
+//			UserID:      userID,
+//			StartDate:   startDate,
+//			EndDate:     &endDate,
+//		}, nil
+//	}
+//
+//	type UpdateSubscriptionRequest struct {
+//		ServiceName string `json:"service_name" example:"Yandex Plus"`
+//		Price       int    `json:"price" example:"400"`
+//		UserID      string `json:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
+//		StartDate   string `json:"start_date" example:"2025-07-01"`
+//		EndDate     string `json:"end_date,omitempty" example:"2025-12-01"`
+//	}
+//
+//	func (r UpdateSubscriptionRequest) ToEntity() (*entity.Subscription, error) {
+//		const layout = "2006-01-02"
+//
+//		userID, err := uuid.Parse(r.UserID)
+//		if err != nil {
+//			return nil, fmt.Errorf("invalid user_id: %w", err)
+//		}
+//
+//		startDate, err := time.Parse(layout, r.StartDate)
+//		if err != nil {
+//			return nil, fmt.Errorf("invalid start_date: %w", err)
+//		}
+//
+//		var endDate time.Time
+//		if r.EndDate != "" {
+//			endDate, err = time.Parse(layout, r.EndDate)
+//			if err != nil {
+//				return nil, fmt.Errorf("invalid end_date: %w", err)
+//			}
+//		}
+//
+//		return &entity.Subscription{
+//			ServiceName: r.ServiceName,
+//			Price:       r.Price,
+//			UserID:      userID,
+//			StartDate:   startDate,
+//			EndDate:     &endDate,
+//		}, nil
+//	}
+//
+//	type TotalRequest struct {
+//		UserID      string `json:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
+//		ServiceName string `json:"service_name" example:"Netflix"`
+//		StartFrom   string `json:"start_from" example:"2024-06-01"`
+//		EndTo       string `json:"end_to,omitempty" example:"2025-08-01"`
+//	}
+//
+//	func (r TotalRequest) ToFilter() (*entity.TotalFilter, error) {
+//		const layout = "2006-01-02"
+//
+//		var (
+//			userID uuid.UUID
+//			err    error
+//			from   time.Time
+//			toPtr  *time.Time
+//		)
+//
+//		if r.UserID != "" {
+//			userID, err = uuid.Parse(r.UserID)
+//			if err != nil {
+//				return nil, fmt.Errorf("invalid user_id: %w", err)
+//			}
+//		}
+//
+//		if r.StartFrom != "" {
+//			from, err = time.Parse(layout, r.StartFrom)
+//			if err != nil {
+//				return nil, fmt.Errorf("invalid from date: %w", err)
+//			}
+//		}
+//
+//		if r.EndTo != "" {
+//			to, err := time.Parse(layout, r.EndTo)
+//			if err != nil {
+//				return nil, fmt.Errorf("invalid to date: %w", err)
+//			}
+//			toPtr = &to
+//		}
+//
+//		return &entity.TotalFilter{
+//			UserID:      userID,
+//			ServiceName: r.ServiceName,
+//			StartFrom:   from,
+//			EndTo:       toPtr,
+//		}, nil
+//	}
+type CreateTaskRequest struct {
+	Title       string         `json:"title" example:"Сделать тестовое задание"`
+	Description *string        `json:"description,omitempty" example:"Нужно реализовать CRUD на Fiber"`
+	Status      *entity.Status `json:"status,omitempty" validate:"omitempty,oneof=new in_progress done" enums:"new,in_progress,done"` // допустимые значения: new, in_progress, done
 }
 
-type SubscriptionResponse struct {
-	ID          string `json:"id"`
-	ServiceName string `json:"service_name"`
-	Price       int    `json:"price"`
-	UserID      string `json:"user_id"`
-	StartDate   string `json:"start_date"`
-	EndDate     string `json:"end_date,omitempty"`
+func (r *CreateTaskRequest) ToEntity() (*entity.Task, error) {
+	return &entity.Task{
+
+		Title:       r.Title,
+		Description: r.Description,
+		Status: func() entity.Status {
+			if r.Status != nil && r.Status.IsValid() {
+				return *r.Status
+			}
+			return entity.StatusNew
+		}(),
+	}, nil
 }
 
-type TotalCostRequest struct {
-	UserID      string `query:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
-	ServiceName string `query:"service_name" example:"Netflix"`
-	StartFrom   string `query:"start_from" example:"2024-06-01"`
-	EndTo       string `query:"end_to" example:"2025-08-01"`
+type UpdateTaskRequest struct {
+	Title       *string        `json:"title,omitempty" example:"Обновлённый заголовок"`
+	Description *string        `json:"description,omitempty" example:"Добавить больше деталей"`
+	Status      *entity.Status `json:"status,omitempty" validate:"omitempty,oneof=new in_progress done" enums:"new,in_progress,done"`
 }
 
-type TotalCostResponse struct {
-	Total int `json:"total" example:"1200"`
+func (r *UpdateTaskRequest) ToEntity() (*entity.Task, error) {
+	return &entity.Task{
+		Title: func() string {
+			if r.Title != nil {
+				return *r.Title
+			}
+			return ""
+		}(),
+		Description: r.Description,
+		Status: func() entity.Status {
+			if r.Status != nil && r.Status.IsValid() {
+				return *r.Status
+			}
+			return ""
+		}(),
+	}, nil
 }
 
 type ListQueryParams struct {
 	Limit  *int `query:"limit" example:"20"`
 	Offset *int `query:"offset" example:"40"`
-}
-
-func (r CreateSubscriptionRequest) ToEntity() (*entity.Subscription, error) {
-	const layout = "2006-01-02" // MM-YYYY
-
-	userID, err := uuid.Parse(r.UserID)
-	if err != nil {
-		return nil, fmt.Errorf("invalid user_id: %w", err)
-	}
-
-	startDate, err := time.Parse(layout, r.StartDate)
-	if err != nil {
-		return nil, fmt.Errorf("invalid start_date: %w", err)
-	}
-
-	var endDate time.Time
-	if r.EndDate != "" {
-		endDate, err = time.Parse(layout, r.EndDate)
-		if err != nil {
-			return nil, fmt.Errorf("invalid end_date: %w", err)
-		}
-	}
-
-	return &entity.Subscription{
-		ID:          uuid.New(),
-		ServiceName: r.ServiceName,
-		Price:       r.Price,
-		UserID:      userID,
-		StartDate:   startDate,
-		EndDate:     &endDate,
-	}, nil
-}
-
-type UpdateSubscriptionRequest struct {
-	ServiceName string `json:"service_name" example:"Yandex Plus"`
-	Price       int    `json:"price" example:"400"`
-	UserID      string `json:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
-	StartDate   string `json:"start_date" example:"2025-07-01"`
-	EndDate     string `json:"end_date,omitempty" example:"2025-12-01"`
-}
-
-func (r UpdateSubscriptionRequest) ToEntity() (*entity.Subscription, error) {
-	const layout = "2006-01-02"
-
-	userID, err := uuid.Parse(r.UserID)
-	if err != nil {
-		return nil, fmt.Errorf("invalid user_id: %w", err)
-	}
-
-	startDate, err := time.Parse(layout, r.StartDate)
-	if err != nil {
-		return nil, fmt.Errorf("invalid start_date: %w", err)
-	}
-
-	var endDate time.Time
-	if r.EndDate != "" {
-		endDate, err = time.Parse(layout, r.EndDate)
-		if err != nil {
-			return nil, fmt.Errorf("invalid end_date: %w", err)
-		}
-	}
-
-	return &entity.Subscription{
-		ServiceName: r.ServiceName,
-		Price:       r.Price,
-		UserID:      userID,
-		StartDate:   startDate,
-		EndDate:     &endDate,
-	}, nil
-}
-
-type TotalRequest struct {
-	UserID      string `json:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
-	ServiceName string `json:"service_name" example:"Netflix"`
-	StartFrom   string `json:"start_from" example:"2024-06-01"`
-	EndTo       string `json:"end_to,omitempty" example:"2025-08-01"`
-}
-
-func (r TotalRequest) ToFilter() (*entity.TotalFilter, error) {
-	const layout = "2006-01-02"
-
-	var (
-		userID uuid.UUID
-		err    error
-		from   time.Time
-		toPtr  *time.Time
-	)
-
-	if r.UserID != "" {
-		userID, err = uuid.Parse(r.UserID)
-		if err != nil {
-			return nil, fmt.Errorf("invalid user_id: %w", err)
-		}
-	}
-
-	if r.StartFrom != "" {
-		from, err = time.Parse(layout, r.StartFrom)
-		if err != nil {
-			return nil, fmt.Errorf("invalid from date: %w", err)
-		}
-	}
-
-	if r.EndTo != "" {
-		to, err := time.Parse(layout, r.EndTo)
-		if err != nil {
-			return nil, fmt.Errorf("invalid to date: %w", err)
-		}
-		toPtr = &to
-	}
-
-	return &entity.TotalFilter{
-		UserID:      userID,
-		ServiceName: r.ServiceName,
-		StartFrom:   from,
-		EndTo:       toPtr,
-	}, nil
 }
